--- a/linkedin_data_scrapper.ipynb
+++ b/linkedin_data_scrapper.ipynb
@@ -1,6 +1,167 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# importing of required libraries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#importing of required libraries\n",
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.common.keys import Keys\n",
+    "from bs4 import BeautifulSoup\n",
+    "import pandas as pd\n",
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## writing a function to fecth all posts based on hashtags"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def give_credits(user,key,hashtags,csv_filepath):\n",
+    "    \n",
+    "    #initilisation of chrome\n",
+    "    driver = webdriver.Chrome(r\"C:\\Users\\murali\\Downloads\\chromedriver.exe\")\n",
+    "    #opening a linkedin log in page\n",
+    "    driver.get(\"https://www.linkedin.com/uas/login?session_redirect=%2Fvoyager%2FloginRedirect%2Ehtml&amp;fromSignIn=true&amp;trk=uno-reg-join-sign-in\")\n",
+    "    \n",
+    "    #entring of log in credentials and clicking signin\n",
+    "    username = driver.find_element_by_id(\"username\")\n",
+    "    password = driver.find_element_by_id(\"password\")\n",
+    "\n",
+    "    username.send_keys(user)\n",
+    "    password.send_keys(key)\n",
+    "\n",
+    "    signin= driver.find_element_by_class_name(\"login__form_action_container \")\n",
+    "    signin.click()\n",
+    "    driver.get('https://www.linkedin.com/feed/')\n",
+    "    driver.maximize_window() # to maximize window\n",
+    "    \n",
+    "    # creating a customized link for opening bases on hasgtag words\n",
+    "    def hashtag_words( keys=[],*args):\n",
+    "        tags=[]\n",
+    "        temp=''\n",
+    "        for i in range(len(keys)):\n",
+    "            if i==0:\n",
+    "                word= \"%23\"+str(keys[i])\n",
+    "                tags.append(word)\n",
+    "            if i>0:\n",
+    "                word='%20%23'+str(keys[i])\n",
+    "                tags.append(word)\n",
+    "        k=temp.join(tags)\n",
+    "        final_link='https://www.linkedin.com/search/results/content/?keywords='+k+'&origin=GLOBAL_SEARCH_HEADER'\n",
+    "        return final_link\n",
+    "    \n",
+    "    #opening a page contains all given hashtag words\n",
+    "    driver.get(hashtag_words(keys=hashtags))\n",
+    "    \n",
+    "    # writing a infinte loop to scroll down\n",
+    "    SCROLL_PAUSE_TIME = 1.5\n",
+    "\n",
+    "    # Get scroll height\n",
+    "    last_height = driver.execute_script(\"return document.body.scrollHeight\")\n",
+    "\n",
+    "    while True:\n",
+    "        # Scroll down to bottom\n",
+    "        driver.execute_script(\"window.scrollTo(0, document.body.scrollHeight);\")\n",
+    "\n",
+    "        # Wait to load page\n",
+    "        time.sleep(SCROLL_PAUSE_TIME)\n",
+    "\n",
+    "        # Calculate new scroll height and compare with last scroll height\n",
+    "        new_height = driver.execute_script(\"return document.body.scrollHeight\")\n",
+    "        if new_height == last_height:\n",
+    "            break\n",
+    "        last_height = new_height\n",
+    "            \n",
+    "    # command to fetch all the information contaains in the page       \n",
+    "    content = driver.page_source\n",
+    "    soup = BeautifulSoup(content)    \n",
+    "    \n",
+    "    # fetching post,name,linkedin_member_link who posted \n",
+    "    link_posts=soup.find_all('li',class_='search-content__result search-entity ember-view')\n",
+    "    print(len(link_posts))\n",
+    "    post=soup.find_all('div',class_='feed-shared-text__text-view feed-shared-text-view white-space-pre-wrap break-words ember-view')\n",
+    "    print(len(post))\n",
+    "    name=soup.find_all('span',class_='feed-shared-actor__name t-14 t-black t-bold hoverable-link-text')\n",
+    "    print(len(name))\n",
+    "    ref_link=soup.findAll('a',href=True, attrs={'class':'feed-shared-actor__container-link display-flex flex-grow-1 app-aware-link ember-view'})\n",
+    "    linkedin_post=[]\n",
+    "    linkedin_post_link=[]\n",
+    "    linkedin_name=[]\n",
+    "    linkedin_link=[]\n",
+    "    for i in range(len(post)):\n",
+    "        n=name[i].text\n",
+    "        print(n)\n",
+    "        linkedin_post.append(post[i].text)\n",
+    "        linkedin_name.append(name[i].text)\n",
+    "        linkedin_link.append(ref_link[i].get('href'))\n",
+    "        k='https://www.linkedin.com/feed/update/'+ link_posts[i].find('div').get('data-id') + '/'\n",
+    "        print(k)\n",
+    "        linkedin_post_link.append(k)\n",
+    "    \n",
+    "        linkedin_post= [s.strip() for s in linkedin_post]  \n",
+    "        linkedin_name= [s.strip() for s in linkedin_name] \n",
+    "        linkedin_link= [s.strip() for s in linkedin_link] \n",
+    "        linkedin_post_link= [s.strip() for s in linkedin_post_link] \n",
+    "\n",
+    "\n",
+    "        linkedin_post= [s.replace('\\n','') for s in linkedin_post]  \n",
+    "        linkedin_name= [s.replace('\\n','') for s in linkedin_name] \n",
+    "        linkedin_link= [s.replace('\\n','') for s in linkedin_link]\n",
+    "        linkedin_post_link= [s.replace('\\n','') for s in linkedin_post_link]\n",
+    "\n",
+    "    #creating a data frame contains name,link and post details\n",
+    "    main_data={'Name':linkedin_name,\n",
+    "                'ref_links':linkedin_link,\n",
+    "                'post':linkedin_post,\n",
+    "                'linkedin_post_link': linkedin_post_link}\n",
+    "        \n",
+    "    post_df=pd.DataFrame(main_data)\n",
+    "    \n",
+    "    # created post_dataframe is saved to csv file \n",
+    "    post_df.to_csv(csv_filepath)\n",
+    "        \n",
+    "    return post_df"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.5"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 2
 }
