--- a/linkedin_data_scrapper.ipynb
+++ b/linkedin_data_scrapper.ipynb
@@ -38,7 +38,7 @@
     "def give_credits(user,key,hashtags,csv_filepath):\n",
     "    \n",
     "    #initilisation of chrome\n",
-    "    driver = webdriver.Chrome(r\"C:\\Users\\murali\\Downloads\\chromedriver.exe\")\n",
+    "    driver = webdriver.Chrome(r\"C:\\Users\\srikanth\\Downloads\\chromedriver.exe\")\n",
     "    #opening a linkedin log in page\n",
     "    driver.get(\"https://www.linkedin.com/uas/login?session_redirect=%2Fvoyager%2FloginRedirect%2Ehtml&amp;fromSignIn=true&amp;trk=uno-reg-join-sign-in\")\n",
     "    \n",
